tests/rosetta/out/Dart/abundant-deficient-and-perfect-number-classifications.dart
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:29:02Z
int pfacSum(int i) {
  var sum = 0;
  var p = 1;
  while (p.toString().compareTo(i / 2.toString()) <= 0) {
    if (i % (p as num) == 0) {
      sum = (sum as num) + (p as num);
    }
    p = (p as num) + 1;
  }
  return sum;
}

void main() {
  var d = 0;
  var a = 0;
  var pnum = 0;
  var i = 1;
  while (i.toString().compareTo(20000.toString()) <= 0) {
    var j = pfacSum(i);
    if (j.toString().compareTo(i.toString()) < 0) {
      d = (d as num) + 1;
    }
    if (j == i) {
      pnum = (pnum as num) + 1;
    }
    if (j.toString().compareTo(i.toString()) > 0) {
      a = (a as num) + 1;
    }
    i = (i as num) + 1;
  }
  print('There are ' + d.toString() + ' deficient numbers between 1 and 20000');
  print('There are ' + a.toString() + ' abundant numbers  between 1 and 20000');
  print('There are ' + pnum.toString() + ' perfect numbers between 1 and 20000');
}

void main() {
  main();
}

bool _equal(dynamic a, dynamic b) {
    if (a is List && b is List) {
        if (a.length != b.length) return false;
        for (var i = 0; i < a.length; i++) { if (!_equal(a[i], b[i])) return false; }
        return true;
    }
    if (a is Map && b is Map) {
        if (a.length != b.length) return false;
        for (var k in a.keys) { if (!b.containsKey(k) || !_equal(a[k], b[k])) return false; }
        return true;
    }
    return a == b;
}

String _formatDuration(Duration d) {
    if (d.inMicroseconds < 1000) return '${d.inMicroseconds}µs';
    if (d.inMilliseconds < 1000) return '${d.inMilliseconds}ms';
    return '${(d.inMilliseconds/1000).toStringAsFixed(2)}s';
}

void _json(dynamic v) {
    print(jsonEncode(v));
}


dynamic _min(dynamic v) {
    List<dynamic>? list;
    if (v is List) list = v;
    else if (v is Map && v['items'] is List) list = (v['items'] as List);
    else if (v is Map && v['Items'] is List) list = (v['Items'] as List);
    else { try { var it = (v as dynamic).items; if (it is List) list = it; } catch (_) {} }
    if (list == null || list.isEmpty) return 0;
    var m = list[0];
    for (var n in list) { if ((n as Comparable).compareTo(m) < 0) m = n; }
    return m;
}

num _sum(dynamic v) {
    Iterable<dynamic>? list;
    if (v is Iterable) list = v;
    else if (v is Map && v['items'] is Iterable) list = (v['items'] as Iterable);
    else if (v is Map && v['Items'] is Iterable) list = (v['Items'] as Iterable);
    else { try { var it = (v as dynamic).items; if (it is Iterable) list = it; } catch (_) {} }
    if (list == null) return 0;
    num s = 0;
    for (var n in list) s += (n as num);
    return s;
}

bool _runTest(String name, void Function() f) {
    stdout.write('   test $name ...');
    var start = DateTime.now();
    try {
        f();
        var d = DateTime.now().difference(start);
        stdout.writeln(' ok (${_formatDuration(d)})');
        return true;
    } catch (e) {
        var d = DateTime.now().difference(start);
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        return false;
    }
}
